@startuml

title __ASSIGNMENT-01-NGUYEN-LE-HOANG's Class Diagram__\n

  namespace communityuni.com {
    class communityuni.com.Simulator {
    }
  }
  

  namespace communityuni.com {
    namespace model {
      class communityuni.com.model.Bus {
      }
    }
  }
  

  namespace communityuni.com {
    namespace model {
      class communityuni.com.model.Car {
      }
    }
  }
  

  namespace communityuni.com {
    namespace model {
      class communityuni.com.model.Map {
      }
    }
  }
  

  namespace communityuni.com {
    namespace model {
      class communityuni.com.model.Motorbike {
      }
    }
  }
  

  namespace communityuni.com {
    namespace model {
      class communityuni.com.model.Road {
      }
    }
  }
  

  namespace communityuni.com {
    namespace model {
      class communityuni.com.model.TrafficLight {
      }
    }
  }
  

  namespace communityuni.com {
    namespace model {
      abstract class communityuni.com.model.Vehicle {
      }
    }
  }
  

  namespace communityuni.com {
    namespace test {
      class communityuni.com.test.BusTest {
      }
    }
  }
  

  namespace communityuni.com {
    namespace test {
      class communityuni.com.test.CarTest {
      }
    }
  }
  

  namespace communityuni.com {
    namespace test {
      class communityuni.com.test.MotorbikeTest {
      }
    }
  }
  

  namespace communityuni.com {
    namespace test {
      class communityuni.com.test.RoadTest {
      }
    }
  }
  

  namespace communityuni.com {
    namespace test {
      class communityuni.com.test.TrafficLightTest {
      }
    }
  }
  

  communityuni.com.Simulator .up.|> java.awt.event.ActionListener
  communityuni.com.Simulator .up.|> java.awt.event.MouseListener
  communityuni.com.Simulator .up.|> java.lang.Runnable
  communityuni.com.Simulator o-- communityuni.com.model.Road : road0
  communityuni.com.model.Bus -up-|> communityuni.com.model.Vehicle
  communityuni.com.model.Car -up-|> communityuni.com.model.Vehicle
  communityuni.com.model.Motorbike -up-|> communityuni.com.model.Vehicle
  communityuni.com.model.Road -up-|> javax.swing.JPanel
  communityuni.com.model.TrafficLight o-- communityuni.com.model.Road : roadAttachedTo
  communityuni.com.model.Vehicle o-- communityuni.com.model.Road : currentRoad
  communityuni.com.test.BusTest o-- communityuni.com.model.Bus : bus
  communityuni.com.test.BusTest o-- communityuni.com.model.Road : road
  communityuni.com.test.CarTest o-- communityuni.com.model.Car : car
  communityuni.com.test.CarTest o-- communityuni.com.model.Road : road
  communityuni.com.test.MotorbikeTest o-- communityuni.com.model.Motorbike : motorbike
  communityuni.com.test.MotorbikeTest o-- communityuni.com.model.Road : road
  communityuni.com.test.RoadTest o-- communityuni.com.model.TrafficLight : light
  communityuni.com.test.RoadTest o-- communityuni.com.model.Road : road
  communityuni.com.test.TrafficLightTest o-- communityuni.com.model.TrafficLight : light
  communityuni.com.test.TrafficLightTest o-- communityuni.com.model.Road : road


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
